Start to add endpoints for model repository
